--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -401,7 +401,7 @@ Note for Panel (b): Tests for equality in distributions of residuals across the 
 \end{threeparttable}
 \end{table}
 
-We use the analogous steps to test Condition~\eqref{eq:crucial2}. First, we test invariance in the distributions of $\bm{\varepsilon}_{k,a}^d$ across treatment regimes within the experimental sample for labor income and employment at age 30. Under the null hypotheses of invariance across treatment regimes, we then test invariance across the experimental and non-experimental samples. To obtain the empirical counterparts to $\bm{\varepsilon}_{k,a}^d$ in Equation~\ref{eq:outcome} and perform these tests, we residualize the outcomes of interest from the baseline variables and the intermediate inputs. That is, we obtain residuals from equations analogous to Equations~\eqref{eq:linearexp} and \eqref{eq:linearnoexp}, in which $R$ and $K$ are not part of the estimation procedure---recall that we find evidence favoring these exclusions in Table~\ref{table:invariance}. \textbf{[JJH: Did you adjust for residual estimation error] [JLG: Yes. As in all of our estimations. See next for location of procedure.]} Before testing, we adjust the residuals for model estimation error as explained in step 6 of Appendix~\ref{appendix:bootstrapspreds}.
+We use the analogous steps to test Condition~\eqref{eq:crucial2}. First, we test invariance in the distributions of $\bm{\varepsilon}_{k,a}^d$ across treatment regimes within the experimental sample for labor income and employment at age 30. Under the null hypotheses of invariance across treatment regimes, we then test invariance across the experimental and non-experimental samples. To obtain the empirical counterparts to $\bm{\varepsilon}_{k,a}^d$ in Equation~\eqref{eq:outcome} and perform these tests, we residualize the outcomes of interest from the baseline variables and the intermediate inputs. That is, we obtain residuals from equations analogous to Equations~\eqref{eq:linearexp} and \eqref{eq:linearnoexp}, in which $R$ and $K$ are not part of the estimation procedure---recall that we find evidence favoring these exclusions in Table~\ref{table:invariance}. \textbf{[JJH: Did you adjust for residual estimation error] [JLG: Yes. As in all of our estimations. See next for location of procedure.]} Before testing, we adjust the residuals for model estimation error as explained in step 6 of Appendix~\ref{appendix:bootstrapspreds}.
 
 With the empirical counterparts of $\bm{\varepsilon}_{k,a}^d$ in hand, we implement three tests to compare the distributions in Table~\ref{table:invarianceerrors}. The first two are standard: mean comparisons through $t$ and Kolgomorov-Smirnov tests. Within the experiment and at age 30, we fail to reject a common distribution of $\bm{\varepsilon}_{k,a}^d$ for both employment and labor income---Panel (a). As before, under this null hypothesis we pool the experimental treatment and control groups and the synthetic treatment and control groups to test invariance across samples by gender. In all but one of our tests we fail to reject invariance across samples---Panel (b).
 
