added roy model for X

--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -165,7 +165,7 @@ F_{k,a}^d \left( \bm{\varepsilon}_{k,a}^d \right) &=&  F_{k,a} \left( \bm{\varep
 \end{eqnarray}
 \end{subequations}
 
-\noindent for $d \in\{0,1\},  k\in\{e,n\}, \  a\in\{1,\dots,\bar{A}\}$, where $\bm{\varepsilon}_{k,a}^d = D\bm{\varepsilon}_{k,a}^1 + (1-D)\bm{\varepsilon}_{k,a}^0$. These conditions are testable in the overlap of the experimental and the non-experimental samples.
+\noindent for $d \in\{0,1\},  k\in\{e,n\}, \  a\in\{1,\dots,\bar{A}\}$, where $\bm{\varepsilon}_{k,a}^d = D\bm{\varepsilon}_{k,a}^1 + (1-D)\bm{\varepsilon}_{k,a}^0$ and $\bm{X}^d_{k,a} = D\bm{X}^1_{k,a}+(1-D)\bm{X}^0_{k,a}$. These conditions are testable in the overlap of the experimental and the non-experimental samples.
 
 Our forecasting procedure is the following:
 
