anna edits to cba

--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -314,7 +314,7 @@ Y_{e,30}^d = \Delta \cdot R +  \bm{B}_{e,30} \cdot \bm{\gamma}_{e,30}^d +\bm{X}_
 
 \noindent where $Y_{e,30}^d$ and $\varepsilon_{e,a}^d$ are scalars and $\bm{\gamma}_{e,30}^d$ and $\bm{\beta}_{e,30}^d$ are vectors of coefficients. Failing to reject the null hypothesis $H_{0}: \Delta = 0$ is equivalent to failing to reject invariance across treatment regimes.
 
-Panel (a) of Table~\ref{table:invariance} displays estimates of the coefficients characterizing Equation~\eqref{eq:linearexp} for labor income at age 30 by gender. For both females and males the tests are precise.\footnote{Note that after accounting for background variables and the intermediate inputs, average labor income is \$2,213 (2014 USD) higher in the treatment group for females. This value is relatively small in the context of annual labor income at age 30 and given that the average in the control group is \$23,443 (2014 USD). The same holds for the males, where the treatment-control difference is \$ 232 net of inputs is and the average for the control group is  \$29,340 (2014 USD).} We do not reject the null hypothesis that the technology is invariant across treatment regimes. Panel (b) of Table~\ref{table:invariance} reports estimates for the rest of coefficients in Equation~\eqref{eq:linearexp}. Years of education is an especially important input in our forecast. It is a statistically and economically significant determinant of labor income and it is experimentally boosted by ABC/CARE (see Table~\ref{table:summint}). \textbf{[JJH: What are the results by gender?] [JLG: I dropped employment because you are right, we need to be concise. The results are now by gender.] [JJH: Residuals?] [JLG: That comes in the next table, Table~\ref{table:invarianceerrors}.]}
+Panel (a) of Table~\ref{table:invariance} displays estimates of the coefficients characterizing Equation~\eqref{eq:linearexp} for labor income at age 30 by gender. For both females and males the tests are precise.\footnote{Note that after accounting for background variables and the intermediate inputs, average labor income is \$2,213 (2014 USD) higher in the treatment group for females. This value is relatively small in the context of annual labor income at age 30 and given that the average in the control group is \$23,443 (2014 USD). The same holds for the males, where the treatment-control difference is \$ 232 net of inputs and the average for the control group is  \$29,340 (2014 USD).} We do not reject the null hypothesis that the technology is invariant across treatment regimes. Panel (b) of Table~\ref{table:invariance} reports estimates for the rest of coefficients in Equation~\eqref{eq:linearexp}. Years of education is an especially important input in our forecast. It is a statistically and economically significant determinant of labor income and it is experimentally boosted by ABC/CARE (see Table~\ref{table:summint}). \textbf{[JJH: What are the results by gender?] [JLG: I dropped employment because you are right, we need to be concise. The results are now by gender.] [JJH: Residuals?] [JLG: That comes in the next table, Table~\ref{table:invarianceerrors}.]}
 
 \begin{table}[!htpb]
 \begin{threeparttable}
@@ -413,9 +413,9 @@ Note for Panel (b): Tests for equality in distributions of residuals across the 
 
 \noindent \textbf{[JJH: Please make format of Tables compatible.] [JLG: This table is now compatible with Table 2 and reports by gender.]}\\
 
-We use the analogous steps to test Condition~\eqref{eq:crucial2}. First, we test invariance in the distributions of $\bm{\varepsilon}_{k,a}^d$ across treatment regimes within the experimental sample for labor income and employment at age 30. Then, invoking invariance across treatment regimes, we test invariance across the experimental and non-experimental residual distributions. To obtain the residuals, we our forecasting model in Equation~\ref{eq:outcome} assuming a linear technology. \textbf{[JJH: Why not test residuals with $R$ + $K$?] [JLG: (a) because our forecasting model in Equation~\eqref{eq:outcome} does not have $R$ + $K$ and we need the empirical counterpart to our model; (b) we just failed to reject the null that $R$ and $K$ belong in our model.]} Before testing, we adjust the residuals for model estimation error as explained in step 6 of Appendix~\ref{appendix:bootstrapspreds}.
+We use the analogous steps to test Condition~\eqref{eq:crucial2}. First, we test invariance in the distributions of $\bm{\varepsilon}_{k,a}^d$ across treatment regimes within the experimental sample for labor income at age 30. Then, invoking invariance across treatment regimes, we test invariance across the experimental and non-experimental residual distributions. To obtain the residuals, we use our forecasting model in Equation~\ref{eq:outcome} assuming a linear technology. \textbf{[JJH: Why not test residuals with $R$ + $K$?] [JLG: (a) because our forecasting model in Equation~\eqref{eq:outcome} does not have $R$ + $K$ and we need the empirical counterpart to our model; (b) we just failed to reject the null that $R$ and $K$ belong in our model.]} Before testing, we adjust the residuals for model estimation error as explained in step 6 of Appendix~\ref{appendix:bootstrapspreds}.
 
-With the empirical counterparts of $\bm{\varepsilon}_{k,a}^d$ in hand, we implement two tests to compare the distributions in Table~\ref{table:invarianceerrors}: mean comparisons through $t$ test and Kolgomorov-Smirnov test. Within the experiment and at age 30, we do not to reject a common distribution of $\bm{\varepsilon}_{k,a}^d$ for both females and males---Panel (a). As before, under this null hypothesis we pool the experimental treatment and control groups and the synthetic treatment and control groups to test invariance across samples by gender. In all but one of our tests we do not reject invariance across samples---Panel (b).
+With the empirical counterparts of $\bm{\varepsilon}_{k,a}^d$ in hand, we implement two tests to compare the distributions in Table~\ref{table:invarianceerrors}: mean comparisons through $t$-tests and distribution comparisons through Kolgomorov-Smirnov tests. Within the experiment and at age 30, we do not reject a common distribution of $\bm{\varepsilon}_{k,a}^d$ for both females and males---Panel (a). As before, under this null hypothesis we pool the experimental treatment and control groups and the synthetic treatment and control groups to test invariance across samples by gender. In all but one of our tests we do not reject invariance across samples---Panel (b).
 
 \textbf{Steps 4, 5, and 6.} \label{section:following} Invariance across treatment regimes and samples makes $\bm{\phi}_{a} (\cdot, \cdot)$ the basic ingredient for forecasting in the experimental sample. Appendix~\ref{appendix:gmm} formalizes our estimation and data combination procedure in a GMM framework.\footnote{As both a referee and various discussants of our paper have pointed out, our identification and estimation strategies do not impose cross-sectional restrictions. This is a consequence of a data restriction: We use different datasets to identify and estimate the  $\bm{\phi}_{a} \left( \bm{x}, \bm{b} \right)$ for each outcome (e.g., labor income, health, crime). Thus, the predictor variables that we are able to use differ across outcomes and we cannot conduct joint estimations.} Figure~\ref{fig:labor-income-profiles} displays our forecasted labor income profiles. Forecasted and actual labor income are closely aligned, which is the final check that we propose for our procedure.\footnote{The content in Figure~\ref{fig:labor-income-profiles} is sufficient but not necessary to calculate the gain of the program due to labor income. It would be sufficient to forecast the difference between the treatment and control groups. Forecasting the levels, however, provides us with additional testable implications. It also allows us to easily account for forecasting error and to verify that the life-cycle profiles that we estimate are comparable to observed profiles for similar socio-economic groups. The pattern of life-cycle labor income we generate is typical for that of low-skilled workers \citep{Blundell-etal_2015_J-Pub-E,Gladden_Taber_2000_WageProgression,Sanders-Taber_2012_AR,Lagakos_Moll_etal_2016_LifeCycle_NBER}.} We proceed similarly with the remaining outcomes---e.g.,\ parental labor income, crime, health. Computing the net present value, the internal rate of return and benefit/cost ratios are straightforward once the age-by-age forecasts are available.\footnote{Some practical details involved in doing this are in Appendices~\ref{app:method_irr} and \ref{app:method_cbratio}.} Finally, we obtain standard errors from the empirical bootstrap distribution. Our inference accounts for each step of our estimation procedure. A step-by-step recipe for our inference is in Appendix~\ref{appendix:bootstrap}.
 
