--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -231,7 +231,7 @@ Labor Income at 30  & $ 23,443.42 $ & $  2,547.50 $ & $ 29,340.31 $ & $\textbf{1
 
 Assignment to treatment has statistically and economically significant causal effects on the intermediate inputs. For females, it increases the average PIAT score by almost one third of a standard deviation.\footnote{The test is standardized to an in-sample standard deviation of 15 units.} For males, the effect is almost half of a standard deviation. The program substantially boosts high-school graduation for females and college graduation for both males and females. We use years of education attained to summarize both effects in a measure that is comparable across genders. Labor income at age 21 for girls is not greatly boosted by the program. This arises in part because treated girls are more likely to be enrolled in college at age 21 and thus not work at this age. However, as the life cycle evolves, lagged labor income is important for obtaining precise forecasts. The program boosts annual labor income, especially for males, for whom the average treatment effect at age 30 is almost 20 thousand dollars.\footnote{Table~\ref{table:summint} displays age-21 and age-30 labor income because labor income is observed at ages 21 and 30 in the experimental sample. Labor income at age 30 is an input in our methodology only after age 30.}\\
 
-\textbf{Step 3. Estimating Equation~\eqref{eq:crucial} and Evaluating the Testable Implications of Conditions~\eqref{eq:crucial} and~\eqref{eq:crucial2}.} Forecasting does not necessarily require that we take a position on the exogeneity of $\bm{X}^d_k, \: k \in \{e,n\}$ with respect to labor income. Structural models based on biased parameters can still give reliable forecasts if relationships between observed and unobserved variables are the same within sample and in the forecast sample.\footnote{See \cite{Liu-etal-2016-USC-Data-Models}.} Conditions~\ref{cond:cond1} and~\ref{cond:cond2} in Appendix~\ref{appendix:incomplete} spell out the requirements. However, exogeneity facilitates: the use of economic theory to interpret treatment effects, to forecast outcomes in other samples where inputs are manipulated differently that in the experimental sample, to test the validity of our synthetic control groups, and to find auxiliary sample counterparts to treatments and controls. Exogeneity also makes identification of $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ in the non-experimental sample straightforward.\footnote{In our baseline estimation, we estimate $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ using ordinary least squares.} Assumption~\ref{ass:exog} formalizes a strong form of this condition:
+\textbf{Step 3. Estimating Equation~\eqref{eq:crucial} and Evaluating the Testable Implications of Conditions~\eqref{eq:crucial} and~\eqref{eq:crucial2}.} Forecasting does not necessarily require that we take a position on the exogeneity of $\bm{X}^d_k, \: k \in \{e,n\}$ with respect to labor income. Structural models based on biased parameters can still give reliable forecasts if relationships between observed and unobserved variables are the same within sample and in the forecast sample.\footnote{See \cite{Liu-etal-2016-USC-Data-Models}.} Conditions~\ref{cond:cond1} and~\ref{cond:cond2} in Appendix~\ref{appendix:incomplete} spell out the requirements. However, exogeneity facilitates: the use of economic theory to interpret treatment effects, to forecast outcomes in other samples where inputs are manipulated differently than in the experimental sample, to test the validity of our synthetic control groups, and to find auxiliary sample counterparts to treatments and controls. Exogeneity also makes identification of $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ in the non-experimental sample straightforward.\footnote{In our baseline estimation, we estimate $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ using ordinary least squares.} Assumption~\ref{ass:exog} formalizes a strong form of this condition:
 
 \onehalfspacing
 \begin{assumption}\label{ass:exog} \textbf{Exogeneity}
@@ -275,7 +275,7 @@ Assumption~\ref{ass:summary} has two distinct aspects that could be resolved fur
 \end{remark}
 
 \begin{remark} \label{remark:cohort} \textbf{(No) Cohort Effects}
-The second aspect of Assumption~\ref{ass:summary}, that the structural relationships are identical in the experimental and non-experimental samples, embeds an assumption about the absence of cohort effects. More precisely, a structural function $\bm{\phi}_{n,a}^d \left( \bm{x}, \bm{b} \right)$, which we identify and estimate in the non-experimental sample with subjects who are older than those in the experimental sample, is a valid tool for forecasting the experimental sample at older ages currently out of the experiment. Note that this does not mean that there are not cohort effects in the outcome of interest, $\bm{Y}_{k,a}^d$. Instead, it means that there are not cohort effects in the \textbf{mapping} between $\bm{X}_{k,a}, \bm{B}_k$ and $\bm{Y}_{k,a}^d$.\footnote{We also require that the path of the inputs that we use for forecasting is the same across treatment regimes. We explore adjustment to cohort effects in Section~\ref{section:cbaresults}.} \textbf{[JJH: But we need a third assumption that input path of experimental is the same in the future as in the past. We can also say that we adjust to be so.] [JLG: I added this in footnote 29 and note that we do have different adjustments in Section~\ref{section:cbaresults}.]} 
+The second aspect of Assumption~\ref{ass:summary}, that the structural relationships are identical in the experimental and non-experimental samples, embeds an assumption about the absence of cohort effects. More precisely, a structural function $\bm{\phi}_{n,a}^d \left( \bm{x}, \bm{b} \right)$, which we identify and estimate in the non-experimental sample with subjects who are older than those in the experimental sample, is a valid tool for forecasting the experimental sample at older ages currently out of the experiment. Note that this does not mean that there are not cohort effects in the outcome of interest, $\bm{Y}_{k,a}^d$. Instead, it means that there are not cohort effects in the \textbf{mapping} between $\bm{X}_{k,a}, \bm{B}_k$ and $\bm{Y}_{k,a}^d$.\footnote{We also require that the path of the inputs that we use for forecasting is the same across treatment regimes. We explore adjustments of our estimates to account for cohort effects in Section~\ref{section:cbaresults}.} \textbf{[JJH: But we need a third assumption that input path of experimental is the same in the future as in the past. We can also say that we adjust to be so.] [JLG: I added this in footnote 29 and note that we do have different adjustments in Section~\ref{section:cbaresults}.]} 
 \end{remark}
 \doublespacing
 
